@@ -1,3 +1,8 @@
+Version Unreleased (TBD)
+- Fix for modded contacts that can wipe out player's fleet when calling them remotely while they do not want to talk with the player.
+  Instead, a dialog window will be displayed that will disappear immediately.
+
+
 Version 3.2.1 (2025.04.04)
 - Fix market intel when using Group By Star System method.
 - Update the game dependency to 0.98a-RC7.
